--- a/_notebooks/2022-11-29-searching-introduction.ipynb
+++ b/_notebooks/2022-11-29-searching-introduction.ipynb
@@ -475,26 +475,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check number 1 failed\n",
-      "Check number 2 failed\n",
-      "Check number 3 failed\n",
-      "Check number 4 failed\n",
-      "Check number 5 failed\n",
-      "Check number 6 failed\n",
-      "Check number 7 failed\n",
-      "Check number 8 failed\n",
-      "Check number 9 failed\n",
-      "Check number 10 failed\n",
-      "Check number 11 failed\n",
-      "Check number 12 failed\n",
-      "Check number 13 failed\n"
+      "0\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb Cell 31\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCheck number \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m failed\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m checkValid()\n",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb Cell 31\u001b[0m in \u001b[0;36mcheckValid\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcheckValid\u001b[39m():\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(test_cases)):\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mif\u001b[39;00m sqrt(test_cases[i]) \u001b[39m==\u001b[39m answers[i]:\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCheck number \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m passed\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb Cell 31\u001b[0m in \u001b[0;36msqrt\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(x)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m y \u001b[39m=\u001b[39m x\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m z \u001b[39m=\u001b[39m (y \u001b[39m+\u001b[39m (x\u001b[39m/\u001b[39;49my)) \u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mwhile\u001b[39;00m (y \u001b[39m-\u001b[39m z) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-29-searching-introduction.ipynb#X42sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \ty \u001b[39m=\u001b[39m z\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
@@ -511,6 +512,260 @@
     "            print(\"Check number {} failed\".format(i+1))\n",
     "\n",
     "checkValid()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algorithms can be written in different ways and still accomplish the same tasks.\n",
+    "Algorithms that look similar often yield differnet outputs.\n",
+    "To solve the same problem, many different algorithms can be used.\n",
+    "\n",
+    "Therefore, algorithms are very important for programmers, and today we're going to explore how to determine the outcome of algorithms, how to deteremine the output of similar algorithms, how to edit existing algorithms, and how to develop our own algorithms."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determine the outcome of algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mystery(num, num2):\n",
+    "    if (num % num2 == 0):\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "\n",
+    "mystery(20, 4)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What does the algorithm do? Please explain in words.\n",
+    "It is a set of commands that runs a task\n",
+    "2. What if I put in 30 as num and 4 as num2. What would be the output?\n",
+    "False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determine the outcome of similar algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is too hot outside\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = 95\n",
+    "if (temp >= 90):\n",
+    "    print(\"it is too hot outside\")\n",
+    "else:\n",
+    "    if (temp >= 65):\n",
+    "        print(\"I will go outside\")\n",
+    "    else:\n",
+    "        print(\"it is too cold outside\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the output of this algorithm? it looks similar but the output is different!\n",
+    "Its too hot outside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = 95\n",
+    "if (temp >= 90):\n",
+    "    print(\"it is too hot outside\")\n",
+    "elif (temp >= 65):\n",
+    "    print(\"it is too hot outside\")\n",
+    "elif (temp < 65):\n",
+    "    print(\"it is too hot outside\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Editing Algorithms\n",
+    "Task: Please edit the algorithm above to have it yield the same results as the previous algorithm! (no matter what temp you put in)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Developing Algorithms"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To develop algorithms, we first need to understand what the question is asking. Then, think about how you would approach it as a human and then try to find what pattern you went through to arrive at the answer. Apply this to code, and there you have it! An algorithm!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's say you wanted to sum up the first five integers. How would you do this in real life?\n",
+    "Your thought process would probably be:\n",
+    "- The sum of the first integer is 1. \n",
+    "- Then, increase that integer by 1. I now add 2 to my existing sum (1). My new sum is 3.\n",
+    "- Repeat until I add 5 to my sum.\n",
+    "The resulting sum is 15.\n",
+    "\n",
+    "Now let's translate this into code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0 # start with a sum of 0\n",
+    "for i in range (1, 6): # you will repeat the process five times for integers 1-5\n",
+    "    sum = sum + i # add the number to your sum\n",
+    "print(sum) # print the result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: Write an algorithm in python that sums up the first 5 odd integers. You can use the following code as a starter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "counter = 1\n",
+    "for i in range (0, 5):\n",
+    "    sum = sum + counter\n",
+    "    counter = counter + 2\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Homework\n",
+    "Create an algorithm that will start with any positive integer n and display the full sequence of numbers that result from the Collatz Conjecture. The COllatz Conjecture is as follows:\n",
+    "1. start with any positive integer\n",
+    "2. if the number is even, divide by 2\n",
+    "3. if the number is odd, multiply by 3 and add 1\n",
+    "4. repeat steps 2 and 3 until you reach 1\n",
+    "\n",
+    "Example: if the starting number was 6, the output would be 6, 3, 10, 5, 16, 8, 4, 2, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "52\n",
+      "26\n",
+      "13\n",
+      "40\n",
+      "20\n",
+      "10\n",
+      "5\n",
+      "16\n",
+      "8\n",
+      "4\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "num = 34\n",
+    "while num != 1:\n",
+    "    if num % 2 == 0:\n",
+    "        num = int(num/2)\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        num = int((num * 3) + 1)\n",
+    "        print(num)\n",
+    "        \n"
    ]
   }
  ],
