--- a/_notebooks/2022-11-29-developing-algorithms-js.ipynb
+++ b/_notebooks/2022-11-29-developing-algorithms-js.ipynb
@@ -172,6 +172,25 @@
     "\n",
     "The network address is `192.168.0.0`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "console.log(\"hi\")"
+   ]
   }
  ],
  "metadata": {
