--- a/_notebooks/2022-12-08-searching-introduction.ipynb
+++ b/_notebooks/2022-12-08-searching-introduction.ipynb
@@ -443,36 +443,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sqrt(x):\n",
-    "\n",
-    "    if x < 2:\n",
-    "        print(x)\n",
-    "\n",
-    "    y = x\n",
-    "    z = (y + (x/y)) / 2\n",
-    "\n",
-    "    while (y - z) > 0:\n",
-    "        y = z\n",
-    "        z = (y + (x/y)) / 2\n",
-    "        \n",
-    "    return z\n",
-    "   \n"
+    " \n",
+    "    # find the first positive number `i` such that `i×i` is greater than `x`\n",
+    "    i = 1\n",
+    "    while i*i <= x:\n",
+    "        i = i + 1\n",
+    "    return i - 1\n",
+    "sqrt(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "Check number 1 passed\n",
       "Check number 2 passed\n",
       "Check number 3 passed\n",
@@ -484,13 +488,14 @@
       "Check number 9 passed\n",
       "Check number 10 passed\n",
       "Check number 11 passed\n",
-      "Check number 12 passed\n"
+      "Check number 12 passed\n",
+      "Check number 13 passed\n"
      ]
     }
    ],
    "source": [
     "from math import sqrt as sq\n",
-    "test_cases = [1,4,85248289,22297284,18939904,91107025,69122596,9721924,37810201,1893294144,8722812816,644398225]\n",
+    "test_cases = [0,1,4,85248289,22297284,18939904,91107025,69122596,9721924,37810201,1893294144,8722812816,644398225]\n",
     "answers = [int(sq(x)) for x in test_cases]\n",
     "\n",
     "def checkValid():\n",
