--- a/_notebooks/2022-12-08-searching-introduction.ipynb
+++ b/_notebooks/2022-12-08-searching-introduction.ipynb
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -831,16 +831,16 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3009587289.py, line 2)",
+     "evalue": "invalid syntax (3679456304.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    umbrella = false;\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [19]\u001b[0;36m\u001b[0m\n\u001b[0;31m    if (sunny == \"true\") {\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "if (sunny) {\n",
-    "    umbrella = false; \n",
+    "if (sunny == \"true\") {\n",
+    "    umbrella == false; \n",
     "} else if (rainy) {\n",
     "    umbrella = true; \n",
     "} else {\n",
@@ -932,6 +932,20 @@
     "4. Convert the result back to decimal: 11000000.10101000.00000000.00000000 -> 192.168.0.0\n",
     "\n",
     "The network address is `192.168.0.0`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
    ]
   }
  ],
