--- a/_notebooks/2022-12-08-searching-introduction.ipynb
+++ b/_notebooks/2022-12-08-searching-introduction.ipynb
@@ -12,6 +12,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additional Notes:\n",
+    "- Algorithm is a set of commands that complete a task\n",
+    "- Human steps in code\n",
+    "- Algorithms can be used for iteration or selection\n",
+    "- There are benefits and draw backs to all algorithms"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
