--- a/_notebooks/2022-12-08-searching-introduction.ipynb
+++ b/_notebooks/2022-12-08-searching-introduction.ipynb
@@ -20,7 +20,9 @@
     "- Algorithm is a set of commands that complete a task\n",
     "- Human steps in code\n",
     "- Algorithms can be used for iteration or selection\n",
-    "- There are benefits and draw backs to all algorithms"
+    "- There are benefits and draw backs to all algorithms\n",
+    "- Algorithms add to efficeincy and effectiveness\n",
+    "- Binary search is a searching algorithm used in a sorted array by repeatedly dividing the search interval in half"
    ]
   },
   {
