--- a/_notebooks/2022-12-01-RandomValues.ipynb
+++ b/_notebooks/2022-12-01-RandomValues.ipynb
@@ -12,7 +12,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Values are a number generated using a large set of numbers and a mathematical algorithm which gives equal probability to all number occuring"
+    "# Random\n",
+    "> Random\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: random"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is a Random Value?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Random Values are a number generated using a large set of numbers and a mathematical algorithm which gives equal probability to all number occuring\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each Result from randomization is equally likely to occur\n",
+    "Using random number generation in a program means each execution may produce a different result"
    ]
   },
   {
@@ -64,6 +96,98 @@
     "    print(element)\n",
     "randomlist()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Real Life Examples:\n",
+    "Dice Roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roll 1:6\n",
+      "Roll 2:5\n",
+      "Roll 3:2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "for i in range(3):\n",
+    "    roll = random.randint(1,6)\n",
+    "    print(\"Roll \" + str(i + 1) + \":\" + str(roll))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenge #1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that will a simulate a coinflip and print the output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coinflip():\n",
+    "    #Write your code here"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXTRA: Create a function that will randomly select 5 playing Cards and check if the 5 cards are a Royal Flush"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework\n",
+    "Given a random decimal number convert it into binary\n",
+    "as Extra convert it to hexidecimal as well. "
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Aug 10 2022, 11:40:04) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
