--- a/_notebooks/2022-12-1-notetemplate.ipynb
+++ b/_notebooks/2022-12-1-notetemplate.ipynb
@@ -113,29 +113,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "higher\n"
-     ]
-    }
-   ],
-   "source": [
-    "const a = 30\n",
-    "const b = 10\n",
-    "if (a > b) {\n",
-    "    console.log(\"higher\")\n",
-    "} else {\n",
-    "    console.log(\"Lower\")\n",
-    "}"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -145,39 +122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m         m\u001b[39m.\u001b[39mappend(\u001b[39mint\u001b[39m(\u001b[39mbin\u001b[39m(i[\u001b[39m2\u001b[39m:])))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(charToBinary(\u001b[39m\"\u001b[39;49m\u001b[39mAPCSP\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb Cell 10\u001b[0m in \u001b[0;36mcharToBinary\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     l\u001b[39m.\u001b[39mappend(\u001b[39mord\u001b[39m(i))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m l:\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m     m\u001b[39m.\u001b[39mappend(\u001b[39mint\u001b[39m(\u001b[39mbin\u001b[39m(i[\u001b[39m2\u001b[39;49m:])))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-1-notetemplate.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000001 1010000 1000011 1010011 1010000\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "def string_to_binary(string):\n",
     "\n",
-    "def charToBinary(x):\n",
-    "    l,m = [],[]\n",
-    "    for i in x:\n",
-    "        l.append(ord(i))\n",
-    "    for i in l:\n",
-    "        m.append(int(bin(i[2:])))\n",
-    "    return m\n",
-    "print(charToBinary(\"APCSP\"))\n",
+    "  binary_list = []\n",
+    "\n",
+    "  \n",
+    "  for char in string:\n",
     "    \n",
+    "    ascii_code = ord(char)\n",
     "\n",
-    "\n",
-    "# The output shown below is the output you are supposed to get\n",
-    "\n",
-    "#import math\n"
+    "    binary = bin(ascii_code)[2:]\n",
+    "    \n",
+    "    binary_list.append(binary)\n",
+    "  binary_string = ' '.join(binary_list)\n",
+    "  return binary_string\n",
+    "print(string_to_binary('APCSP'))  "
    ]
   }
  ],
@@ -197,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Aug 10 2022, 11:40:04) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
