--- a/_notebooks/2022-12-1-notetemplate.ipynb
+++ b/_notebooks/2022-12-1-notetemplate.ipynb
@@ -1,11 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Note Template\n",
-    "- comments: true"
+    "> Note Template\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: Note Template "
    ]
   },
   {
