--- a/_posts/2022-12-13-newtest.md
+++ b/_posts/2022-12-13-newtest.md
@@ -1,7 +1,7 @@
 ---
 keywords: fastai
-description: Test
-title: test 
+description: Blog Extra Credit
+title: Blog Extra Credit
 toc: true 
 badges: true
 comments: true
@@ -21,7 +21,41 @@ layout: notebook
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>TEST</p>
+<h1 id="Kathyleen-Beveridge:">Kathyleen Beveridge:<a class="anchor-link" href="#Kathyleen-Beveridge:"> </a></h1><p>Background:</p>
+<ul>
+<li>Lived in Spain for a little bit</li>
+<li>Lived in San Jose till 2004
+Career/Jobs:</li>
+<li>Mission statement: "Not only to survive but to thrive with passion, compassion, humor and style</li>
+<li>Learned to surf on the ocean waves</li>
+<li>HP mission statement: Create technology that makes life better for everyone, everywhere</li>
+<li>One commonality between her companies was that they were all focused around helping the people and giving the people what they need 
+NPI Stage Gates:</li>
+<li>Does this product make sense for the market?</li>
+<li>Does the product help the target customers</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Kris-Porter:">Kris Porter:<a class="anchor-link" href="#Kris-Porter:"> </a></h1><ul>
+<li>Jobs: SRE,DevOps, Infrastructure
+Background: </li>
+<li>Went to UCLA for Electrical Engineering</li>
+<li>Obtained a masters degree in Electrical engineering from Cal State LA</li>
+<li>Learned good skills in 2008 by learning about research (Marketable skill)
+Career: </li>
+<li>Got a job at a startup in 2010 which launched his DevOps career</li>
+<li>DevOps is important to prevent DDOS and to prevent hackers from accessing your site</li>
+<li>Geo fences can be used to send messages to users when you are close to their stores</li>
+<li>"Continous learning" - Always learning new skills to apply to new challenges and jobs
+Projects:</li>
+<li>Streaming Media Infrastructure</li>
+<li>Analysitics Infrastructure Projects</li>
+<li>Twitter Projects</li>
+</ul>
 
 </div>
 </div>
