--- a/_notebooks/2022-12-13-newtest.ipynb
+++ b/_notebooks/2022-12-13-newtest.ipynb
@@ -23,15 +23,28 @@
     "# Kathyleen Beveridge: \n",
     "Background:\n",
     "- Lived in Spain for a little bit\n",
-    "- Lived in San Jose till 2004\n",
+    "- Lived in San Jose till 2004\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Career/Jobs:\n",
     "- Mission statement: \"Not only to survive but to thrive with passion, compassion, humor and style\n",
-    "- Learned to surf on the ocean waves\n",
     "- HP mission statement: Create technology that makes life better for everyone, everywhere\n",
-    "- One commonality between her companies was that they were all focused around helping the people and giving the people what they need \n",
-    "NPI Stage Gates:\n",
-    "- Does this product make sense for the market?\n",
-    "- Does the product help the target customers"
+    "- One commonality between her companies was that they were all focused around helping the people and giving the people what they need "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NPI gate Stage:\n",
+    "- What is the use of the product in the market?\n",
+    "- What is the use of the product for the target market"
    ]
   },
   {
@@ -41,19 +54,53 @@
    "source": [
     "# Kris Porter:\n",
     "- Jobs: SRE,DevOps, Infrastructure\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Background: \n",
     "- Went to UCLA for Electrical Engineering\n",
     "- Obtained a masters degree in Electrical engineering from Cal State LA\n",
-    "- Learned good skills in 2008 by learning about research (Marketable skill)\n",
+    "- Learned good skills in 2008 by learning about research (Marketable skill)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Career: \n",
     "- Got a job at a startup in 2010 which launched his DevOps career\n",
     "- DevOps is important to prevent DDOS and to prevent hackers from accessing your site\n",
     "- Geo fences can be used to send messages to users when you are close to their stores\n",
-    "- \"Continous learning\" - Always learning new skills to apply to new challenges and jobs\n",
+    "- \"Continous learning\" - Always learning new skills to apply to new challenges and jobs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Projects:\n",
     "- Streaming Media Infrastructure\n",
     "- Analysitics Infrastructure Projects\n",
     "- Twitter Projects"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions\n",
+    "1. It is important to be able to speak code to other people and communicate to them if they arent able to understand it\n",
+    "2. Her biggest challenge was that Qualcomm would accquire other companies so she would have many new team members and she had to learn to be adaptive\n",
+    "3. Interviews in the IT jobs can be difficult because code must be from scratch and work without any errors\n",
+    "4. Navigating the new job repos and new tools can be difficult but you must take time to adapt to it. \n"
    ]
   }
  ],
