--- a/_posts/2022-12-13-newtest.md
+++ b/_posts/2022-12-13-newtest.md
@@ -60,6 +60,18 @@ Projects:</li>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Questions">Questions<a class="anchor-link" href="#Questions"> </a></h1><ol>
+<li>It is important to be able to speak code to other people and communicate to them if they arent able to understand it</li>
+<li>Her biggest challenge was that Qualcomm would accquire other companies so she would have many new team members and she had to learn to be adaptive</li>
+<li>Interviews in the IT jobs can be difficult because code must be from scratch and work without any errors</li>
+<li>Navigating the new job repos and new tools can be difficult but you must take time to adapt to it. </li>
+</ol>
+
+</div>
+</div>
+</div>
 </div>
  
 
