--- a/_notebooks/2022-12-13-newtest.ipynb
+++ b/_notebooks/2022-12-13-newtest.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "# Kathyleen Beveridge: \n",
-    "Background:\n",
+    "# Background:\n",
     "- Lived in Spain for a little bit\n",
     "- Lived in San Jose till 2004\n"
    ]
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Career/Jobs:\n",
+    "# Career/Jobs:\n",
     "- Mission statement: \"Not only to survive but to thrive with passion, compassion, humor and style\n",
     "- HP mission statement: Create technology that makes life better for everyone, everywhere\n",
     "- One commonality between her companies was that they were all focused around helping the people and giving the people what they need "
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NPI gate Stage:\n",
+    "# NPI gate Stage:\n",
     "- What is the use of the product in the market?\n",
     "- What is the use of the product for the target market"
    ]
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Background: \n",
+    "# Background: \n",
     "- Went to UCLA for Electrical Engineering\n",
     "- Obtained a masters degree in Electrical engineering from Cal State LA\n",
     "- Learned good skills in 2008 by learning about research (Marketable skill)"
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Career: \n",
+    "# Career: \n",
     "- Got a job at a startup in 2010 which launched his DevOps career\n",
     "- DevOps is important to prevent DDOS and to prevent hackers from accessing your site\n",
     "- Geo fences can be used to send messages to users when you are close to their stores\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Projects:\n",
+    "# Projects:\n",
     "- Streaming Media Infrastructure\n",
     "- Analysitics Infrastructure Projects\n",
     "- Twitter Projects"
