--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -158,12 +158,41 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Hack #4 - Thinking through a problem\n",
     "- create your own simulation involving a dice roll\n",
-    "- should include randomization and a function for rolling + multiple trials"
+    "- should include randomization and a function for rolling + multiple trials\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your dice roll is 4\n",
+      "Your dice roll is 4\n",
+      "Your dice roll is 1\n",
+      "Your dice roll is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "n = int(input(\"How many dice rolls?\"))\n",
+    "def roll(n):\n",
+    "    for i in range (n):\n",
+    "        \n",
+    "        x = random.randint(1,6)\n",
+    "        print(\"Your dice roll is\", x)\n",
+    "roll(n)"
    ]
   },
   {
