--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -27,13 +27,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -54,13 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -70,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "red shoes\n"
+      "jordans\n"
      ]
     }
    ],
@@ -87,8 +73,9 @@
     "add = input(\"What do you want to add\")\n",
     "remove = input(\"What you to remove\")\n",
     "def mycloset():\n",
-    "    if add == \"\"\n",
     "    myclothes = [\"red shoes\", \"green pants\", \"tie\", \"belt\"]\n",
+    "    myclothes.append(add)\n",
+    "    myclothes.remove(remove)\n",
     "    print(random.choice(myclothes))\n",
     "mycloset()\n"
    ]
@@ -285,6 +272,45 @@
     "Be creative! Think about instances in your own life, science, puzzles that can be made into simulations\n",
     "\n",
     "Some ideas to get your brain running: A simulation that breeds two plants and tells you phenotypes of offspring, an adventure simulation..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "my code simulates who will win an nfl game played 10 times. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eagles won 6 times Cowboys won 4 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "teams = [\"eagles\", \"cowboys\"]\n",
+    "def game():\n",
+    "    eagles = 0\n",
+    "    cowboys = 0\n",
+    "    for i in range (10):\n",
+    "        winner = random.choice(teams)\n",
+    "        if winner == \"eagles\":\n",
+    "            eagles +=1\n",
+    "        if winner == \"cowboys\":\n",
+    "            cowboys +=1\n",
+    "    print(\"Eagles won\",eagles,\"times\", \"Cowboys won\",cowboys,\"times\")\n",
+    "game()\n",
+    "\n"
    ]
   }
  ],
