--- a/_posts/2022-12-12-hw.md
+++ b/_posts/2022-12-12-hw.md
@@ -82,8 +82,9 @@ layout: notebook
 <span class="n">add</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;What do you want to add&quot;</span><span class="p">)</span>
 <span class="n">remove</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;What you to remove&quot;</span><span class="p">)</span>
 <span class="k">def</span> <span class="nf">mycloset</span><span class="p">():</span>
-    <span class="k">if</span> <span class="n">add</span> <span class="o">==</span> <span class="s2">&quot;&quot;</span>
     <span class="n">myclothes</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;red shoes&quot;</span><span class="p">,</span> <span class="s2">&quot;green pants&quot;</span><span class="p">,</span> <span class="s2">&quot;tie&quot;</span><span class="p">,</span> <span class="s2">&quot;belt&quot;</span><span class="p">]</span>
+    <span class="n">myclothes</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">add</span><span class="p">)</span>
+    <span class="n">myclothes</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">remove</span><span class="p">)</span>
     <span class="nb">print</span><span class="p">(</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="n">myclothes</span><span class="p">))</span>
 <span class="n">mycloset</span><span class="p">()</span>
 </pre></div>
@@ -98,7 +99,7 @@ layout: notebook
 <div class="output_area">
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>red shoes
+<pre>jordans
 </pre>
 </div>
 </div>
@@ -353,6 +354,57 @@ Be creative! Think about instances in your own life, science, puzzles that can b
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>my code simulates who will win an nfl game played 10 times.</p>
+
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
+
+<span class="n">teams</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;eagles&quot;</span><span class="p">,</span> <span class="s2">&quot;cowboys&quot;</span><span class="p">]</span>
+<span class="k">def</span> <span class="nf">game</span><span class="p">():</span>
+    <span class="n">eagles</span> <span class="o">=</span> <span class="mi">0</span>
+    <span class="n">cowboys</span> <span class="o">=</span> <span class="mi">0</span>
+    <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span> <span class="p">(</span><span class="mi">10</span><span class="p">):</span>
+        <span class="n">winner</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="n">teams</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">winner</span> <span class="o">==</span> <span class="s2">&quot;eagles&quot;</span><span class="p">:</span>
+            <span class="n">eagles</span> <span class="o">+=</span><span class="mi">1</span>
+        <span class="k">if</span> <span class="n">winner</span> <span class="o">==</span> <span class="s2">&quot;cowboys&quot;</span><span class="p">:</span>
+            <span class="n">cowboys</span> <span class="o">+=</span><span class="mi">1</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Eagles won&quot;</span><span class="p">,</span><span class="n">eagles</span><span class="p">,</span><span class="s2">&quot;times&quot;</span><span class="p">,</span> <span class="s2">&quot;Cowboys won&quot;</span><span class="p">,</span><span class="n">cowboys</span><span class="p">,</span><span class="s2">&quot;times&quot;</span><span class="p">)</span>
+<span class="n">game</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Eagles won 6 times Cowboys won 4 times
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
 </div>
  
 
