--- a/_notebooks/2022-12-13-newtest.ipynb
+++ b/_notebooks/2022-12-13-newtest.ipynb
@@ -102,6 +102,15 @@
     "3. Interviews in the IT jobs can be difficult because code must be from scratch and work without any errors\n",
     "4. Navigating the new job repos and new tools can be difficult but you must take time to adapt to it. \n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insights/Summary\n",
+    "- From the speakers I have learned that you should pursue your dream job and the career path you want. All the speakers also had important insight into how you should work with a team. They highlighted the fact that teamwork relies upon adaptability and being agile, so you can fill multiple roles in a company and get along with many people. Another important thing learned was to develop your critcal skills and always learning. Kris Porter emphasized \"continous learning\" to always gain new skills with a new job or new role in a company. My key takea"
+   ]
   }
  ],
  "metadata": {
