--- a/_posts/2022-12-13-newtest.md
+++ b/_posts/2022-12-13-newtest.md
@@ -21,18 +21,30 @@ layout: notebook
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Kathyleen-Beveridge:">Kathyleen Beveridge:<a class="anchor-link" href="#Kathyleen-Beveridge:"> </a></h1><p>Background:</p>
-<ul>
+<h1 id="Kathyleen-Beveridge:">Kathyleen Beveridge:<a class="anchor-link" href="#Kathyleen-Beveridge:"> </a></h1><h1 id="Background:">Background:<a class="anchor-link" href="#Background:"> </a></h1><ul>
 <li>Lived in Spain for a little bit</li>
-<li>Lived in San Jose till 2004
-Career/Jobs:</li>
+<li>Lived in San Jose till 2004</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Career/Jobs:">Career/Jobs:<a class="anchor-link" href="#Career/Jobs:"> </a></h1><ul>
 <li>Mission statement: "Not only to survive but to thrive with passion, compassion, humor and style</li>
-<li>Learned to surf on the ocean waves</li>
 <li>HP mission statement: Create technology that makes life better for everyone, everywhere</li>
-<li>One commonality between her companies was that they were all focused around helping the people and giving the people what they need 
-NPI Stage Gates:</li>
-<li>Does this product make sense for the market?</li>
-<li>Does the product help the target customers</li>
+<li>One commonality between her companies was that they were all focused around helping the people and giving the people what they need </li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="NPI-gate-Stage:">NPI gate Stage:<a class="anchor-link" href="#NPI-gate-Stage:"> </a></h1><ul>
+<li>What is the use of the product in the market?</li>
+<li>What is the use of the product for the target market</li>
 </ul>
 
 </div>
@@ -41,17 +53,38 @@ NPI Stage Gates:</li>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Kris-Porter:">Kris Porter:<a class="anchor-link" href="#Kris-Porter:"> </a></h1><ul>
-<li>Jobs: SRE,DevOps, Infrastructure
-Background: </li>
+<li>Jobs: SRE,DevOps, Infrastructure</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Background:">Background:<a class="anchor-link" href="#Background:"> </a></h1><ul>
 <li>Went to UCLA for Electrical Engineering</li>
 <li>Obtained a masters degree in Electrical engineering from Cal State LA</li>
-<li>Learned good skills in 2008 by learning about research (Marketable skill)
-Career: </li>
+<li>Learned good skills in 2008 by learning about research (Marketable skill)</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Career:">Career:<a class="anchor-link" href="#Career:"> </a></h1><ul>
 <li>Got a job at a startup in 2010 which launched his DevOps career</li>
 <li>DevOps is important to prevent DDOS and to prevent hackers from accessing your site</li>
 <li>Geo fences can be used to send messages to users when you are close to their stores</li>
-<li>"Continous learning" - Always learning new skills to apply to new challenges and jobs
-Projects:</li>
+<li>"Continous learning" - Always learning new skills to apply to new challenges and jobs</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Projects:">Projects:<a class="anchor-link" href="#Projects:"> </a></h1><ul>
 <li>Streaming Media Infrastructure</li>
 <li>Analysitics Infrastructure Projects</li>
 <li>Twitter Projects</li>
@@ -68,6 +101,15 @@ Projects:</li>
 <li>Interviews in the IT jobs can be difficult because code must be from scratch and work without any errors</li>
 <li>Navigating the new job repos and new tools can be difficult but you must take time to adapt to it. </li>
 </ol>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Insights/Summary">Insights/Summary<a class="anchor-link" href="#Insights/Summary"> </a></h1><ul>
+<li>From the speakers I have learned that you should pursue your dream job and the career path you want. All the speakers also had important insight into how you should work with a team. They highlighted the fact that teamwork relies upon adaptability and being agile, so you can fill multiple roles in a company and get along with many people. Another important thing learned was to develop your critcal skills and always learning. Kris Porter emphasized "continous learning" to always gain new skills with a new job or new role in a company. My key takea</li>
+</ul>
 
 </div>
 </div>
